--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next/font": "^13.5.6",
+    "@next/font": "^13.5.6",
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.69.4"
+    "sass": "^1.69.4",
+    "swiper": "^11.0.3"
   }
 }
